# advent2023

./: .gitignore  Cargo.toml
day01/: star01.py  star01.rs  star02.py  star02.rs
day02/: star03.py  star03.rs  star04.py  star04.rs
day03/: star05.py  star05.rs  star06.py  star06.rs
day04/: star07.py  star07.rs  star08.py  star08.rs
day05/: star09.py  star09.rs  star10.py  star10.rs
day06/: star11.py  star11.rs  star12.py  star12.rs
day07/: star13.py  star13.rs  star14.py  star14.rs
day08/: star15.py  star16.py  star16.rs
day09/: star17.py  star17.rs  star18.py  star18.rs
day10/: star19.py  star19.rs  star20.py  star20.rs
day11/: star21.py  star21.rs  star22.py  star22.rs
day12/: star23.py  star24.py
day13/: star25.py  star26.py
day14/: star27.py  star28.py
day15/: star29.py  star30.py
day16/: star31.py  star32.py
day17/: star33.py
